fixed vertical alignment of jPlayer controls and fixed playlist rollover

--- a/_/css/style.css
+++ b/_/css/style.css
@@ -387,9 +387,6 @@ section.header-wrapper {
 }
 
 .jplayer-container-ext {
-
-	width: 420px;
-	height: 70px;
 	display: inline-block;
 }
 
