--- a/_/skin/pink.holiday/jplayer.pink.holiday.css
+++ b/_/skin/pink.holiday/jplayer.pink.holiday.css
@@ -41,10 +41,10 @@ div.jp-interface {
 }
 
 div.jp-audio div.jp-type-single div.jp-interface {
-	height:80px;
+	height:70px;
 }
 div.jp-audio div.jp-type-playlist div.jp-interface {
-	height:80px;
+	height:70px;
 }
 
 /* @group CONTROLS */
@@ -66,8 +66,8 @@ div.jp-interface ul.jp-controls {
 }
 
 div.jp-audio ul.jp-controls {
-	width: 380px;
-	padding:20px 20px 0 20px;
+	width: 400px;
+	padding:15px 20px 0 20px;
 }
 
 div.jp-video ul.jp-controls,
@@ -140,7 +140,7 @@ div.jp-progress {
 }
 div.jp-audio div.jp-progress {
 	position: absolute;
-	top:32px;
+	top:28px;
 	height:15px;
 }
 div.jp-audio div.jp-type-single div.jp-progress {
@@ -171,13 +171,12 @@ div.jp-play-bar {
 
 /* The seeking class is added/removed inside jPlayer */
 div.jp-seeking-bg {
-	background: url("jplayer.blue.monday.seeking.gif");
+	background: url("pbar-ani.png");
 }
 
 /* @end */
 
 /* @group volume controls */
-
 
 a.jp-mute,
 a.jp-unmute,
@@ -249,7 +248,7 @@ div.jp-volume-bar {
 	cursor: pointer;
 }
 div.jp-audio div.jp-volume-bar {
-	top:37px;
+	top:32px;
 	left:330px;
 }
 div.jp-video div.jp-volume-bar {
@@ -316,9 +315,14 @@ div.jp-title {
 
 div.jp-title,
 div.jp-playlist {
-	width:100%;
+	width:300px;
 	background: white;
-	border-top:1px solid #E5EAEA;
+	/*border-top:1px solid #E5EAEA;*/
+	position: absolute;
+	top: 70px; left: -300px;
+	height: 0;
+	overflow: hidden;
+	
 }
 div.jp-type-single div.jp-title,
 div.jp-type-playlist div.jp-title,
